# lsim

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html  lsim.js  lsim.wasm
.github/workflows/: cmake.yml
docs/: building.md  motivation.md  todo.md  using_lsim_gui.md  using_python_bindings.md
examples/: adder.lsim  compare.circ  compare.lsim  rom_decled.lsim  rom_hexled.lsim  rom_manual.lsim  shifter.circ  shifter.lsim  test_led.lsim  tristate.circ
examples/cpu_8bit/: alu.lsim  computer.lsim  lib_counter.lsim  lib_latches.lsim  lib_memory.lsim  lib_muxers.lsim  rom_prog_8b.lsim
libs/cute/: cute_files.cpp
src/: algebra.cpp  algebra.h  basic.cpp  basic.h  circuit.cpp  circuit.h  circuit_description.cpp  circuit_description.h  circuit_instance.cpp  circuit_instance.h  circuit_library.cpp  circuit_library.h  component_description.cpp  component_description.h  error.cpp  error.h  extra.cpp  extra.h  gate.cpp  gate.h  load_logisim.cpp  load_logisim.h  lsim_context.cpp  lsim_context.h  model_circuit.cpp  model_circuit.h  model_circuit_library.cpp  model_circuit_library.h  model_component.cpp  model_component.h  model_property.cpp  model_property.h  model_wire.cpp  model_wire.h  property.cpp  property.h  python.cpp  serialize.cpp  serialize.h  sim_circuit.cpp  (+15 more)
src/bench/: bench_adder.py  bench_alu.py  bench_compare.py  bench_counters.py  bench_latches.py  bench_memory.py  bench_muxers.py  bench_shifter.py  bench_utils.py
src/gui/: algebra.cpp  algebra.h  circuit_editor.cpp  circuit_editor.h  colors.h  component_draw.cpp  component_draw.h  component_icon.cpp  component_icon.h  component_std.cpp  component_std.h  component_ui.cpp  component_ui.h  component_widget.cpp  component_widget.h  configuration.h  file_selector.cpp  file_selector.h  gui_defs.h  imgui_ex.cpp  imgui_ex.h  main.cpp  main_emscripten.cpp  main_gui.cpp  main_gui.h  main_sdl_gl.cpp  shapes.h  shell_minimal.html  ui_context.cpp  ui_context.h  ui_panel_circuit.cpp  ui_panel_component.cpp  ui_panel_library.cpp  ui_panel_property.cpp  ui_popup_files.cpp  ui_popup_files.h  ui_window_main.cpp  ui_window_main.h
src/gui/imgui/: imconfig.h
src/tools/: rom_8bit_common.py  rom_8bit_ctrl.py  rom_8bit_program.py  rom_builder.py  rom_led_decimal_8b.py  rom_led_hex_digit.py
src/tools/speedtest/: speedtest_main.cpp
tests/: test_algebra.cpp  test_circuit.cpp  test_extra.cpp  test_gate.cpp  test_logisim.cpp
